# live-logs-handler

./: .gitignore  README.md  pyproject.toml  setup.py  test_multithreaded.py
live-logs-env/: pyvenv.cfg
live_logs_handler/: __init__.py  handler.py
